# adk-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  pr-ready-summary.md  todo-session-backup.md
adk-api-client/: Cargo.toml  README.md
adk-api-client/src/: auth.rs  in_memory.rs  lib.rs  tests.rs
adk-cli/: Cargo.toml  README.md
adk-cli/docs/: agent_settings.md  api_integrations.md  chat_settings.md  docs.md  entities.md  experimental_config.md  flows.md  functions.md  handoffs.md  response_control.md  safety_filters.md  sms.md  speech_recognition.md  topics.md  variables.md  variants.md  voice_settings.md
adk-cli/src/: args.rs  branch.rs  chat.rs  console.rs  credentials.rs  deployments.rs  diff.rs  docs.rs  init.rs  install_helpers.rs  login.rs  main.rs  output.rs  project.rs  pull.rs  push.rs  review.rs  self_update.rs  start.rs  status.rs  validate.rs
adk-cli/src/commands/: branch.rs  chat.rs  completion.rs  conversations.rs  deployments.rs  docs.rs  format.rs  init.rs  login.rs  mod.rs  project.rs  pull.rs  push.rs  revert.rs  review.rs  self_update.rs  start.rs  status.rs  uninstall.rs
adk-cli/tests/: cli_surface_test.rs  e2e_fixture_project_test.rs  human_output_test.rs  python_adk_direct_cli_parity_test.rs  python_adk_recording_fixture_integrity_test.rs  python_adk_recording_test.rs  python_parity_test.rs  python_recording_fixture_test.rs  record_python_adk_from_manifest_test.rs  record_python_adk_httpmock_fixtures_test.rs  replay_python_adk_httpmock_fixtures_test.rs
adk-cli/tests/fixtures/: SYNC_FROM_PYTHON_ADK.txt
adk-cli/tests/support/: mod.rs  recording_manifest.rs
adk-command-gen/: Cargo.toml  README.md
adk-command-gen/src/: lib.rs  parity_matrix_tests.rs  push_flows.rs  push_functions.rs  push_single_file_resources.rs  push_topics.rs  push_variables.rs  tests.rs  yaml_resources.rs
adk-command-gen/src/push_single_file_resources/: interaction_files.rs  structured.rs
adk-core/: Cargo.toml  README.md  build.rs  clippy.toml
adk-core/generated-sdk/: decorators.py  flow.py  memory.py  sms.py
adk-core/python-gen-template/: __init__.py  agentic_dial.py  agentic_dial.pyi  analytics.py  attachment.py  attachment.pyi  conv_utils.py  conversation.py  decorators.py  emails.py  entity_validator.py  external_events.py  flow.py  flow.pyi  history.pyi  knowledge_base.py  llm_client.py  llm_client.pyi  log_utils.pyi  memory.py  memory.pyi  secret_vault.py  sms.py  sms.pyi  state_utils.py  value_extraction.py  value_extraction.pyi  value_extraction_types.py  value_extraction_types.pyi  webchat.py  webchat.pyi
adk-core/python-gen-template/integrations/: __init__.py  integration.py  integration.pyi  integration_utils.py  integrations.py
adk-core/src/: lib.rs  pull.rs  push.rs  python_functions.rs  python_syntax.rs  service.rs  status_snapshot.rs  validation.rs  workspace.rs
adk-core/src/discover/: mod.rs  resource_utils.rs  resources_impl.rs
adk-core/src/resources/: agent_settings.rs  api_integration.rs  asr_settings.rs  channels.rs  common.rs  entity.rs  experimental_config.rs  flow.rs  function.rs  handoff.rs  keyphrase_boosting.rs  lifecycle.rs  mod.rs  phrase_filter.rs  pronunciation.rs  safety_filters.rs  sms_template.rs  topic.rs  transcript_correction.rs  variable.rs  variant.rs
adk-core/tests/: discover_metadata_test.rs  project_fixture_test.rs
adk-domain/: Cargo.toml  README.md
adk-domain/src/: lib.rs
adk-ffi/: Cargo.toml  README.md
adk-ffi/src/: lib.rs
adk-io/: Cargo.toml  README.md
adk-io/src/: fs.rs  lib.rs
adk-napi/: Cargo.toml  README.md  native.cjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
adk-napi/published-smoke/: README.md  package.json  wrapper.test.cjs
adk-napi/scripts/: test-published.cjs
adk-napi/src/: index.ts  lib.rs
adk-napi/test/: wrapper.test.cjs  wrapper.test.ts  wrapper_cases.ts
adk-napi/tests/: napi_wrapper_test.rs
adk-platform-api/: Cargo.toml  README.md
adk-platform-api/src/: in_memory.rs  lib.rs  push_broad.rs  push_extended.rs  push_extended_tests.rs  push_flows.rs  push_functions.rs  push_single_file_resources.rs  push_topics.rs  push_variables.rs  tests.rs
adk-platform-api/src/push_single_file_resources/: interaction_files.rs  interaction_files_tests.rs  structured.rs
adk-protobuf/: CLAUDE.md  Cargo.toml  README.md
adk-protobuf/src/: agent.rs  api_integrations.rs  artifact.rs  asr.rs  asr_settings.rs  channels.rs  child_overwrites.rs  content_filter_settings.rs  csat.rs  end_function.rs  entities.rs  experimental_config.rs  flows.rs  functions.rs  generated_lib.rs  guardrails.rs  handoff.rs  integrations.rs  keyphrase_boosting.rs  knowledge_base.rs  languages.rs  lib.rs  llm_settings.rs  pronunciations.rs  ragdoll.rs  sms.rs  snapshot.rs  start_function.rs  stop_keywords.rs  testing.rs  transcript_corrections.rs  translations.rs  variables.rs  variant.rs  voice.rs
adk-push-pull/: Cargo.toml  README.md  clippy.toml
adk-push-pull/src/: function_parsing.rs  lib.rs  parity_matrix_tests.rs  projection.rs  resource_specs.rs  tests.rs
adk-push-pull/src/command_gen/: aggregates.rs  flows.rs  functions.rs  json_summary.rs  mod.rs  single_file_resources.rs  (+3 more)
adk-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
adk-python/src/: lib.rs
adk-python/tests/: test_smoke.py
adk-resources/: Cargo.toml  README.md
adk-resources/src/: discover.rs  function_parsing.rs  ids.rs  lib.rs  local_parse.rs  local_parse_tests.rs  local_resources.rs  materialization.rs  materialization_broad_resources.rs  materialization_reference_handling.rs  materialization_synthetic.rs  parity_matrix_tests.rs  projection.rs  push_command_inputs.rs  push_command_queue.rs  push_command_summary.rs  push_commands.rs  python_functions.rs  resource_lifecycle.rs  resource_utils.rs  safety_filters.rs  specs.rs  status_snapshot.rs  test_support.rs  tests.rs
adk-service/: Cargo.toml  README.md
adk-service/src/: lib.rs
adk-service/tests/: project_fixture_test.rs
adk-types/: Cargo.toml  README.md  clippy.toml
adk-types/src/: lib.rs
(+363 files in other folders)
