[workspace]
members = [
  "adk-cli",
  "adk-resources",
  "adk-core",
  "adk-service",
  "adk-io",
  "adk-api-client",
  "adk-ffi",
  "adk-napi",
  "adk-protobuf",
  "adk-types",
]
resolver = "2"

[workspace.package]
version = "0.0.9"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/polyai/adk-rs"
rust-version = "1.95.0"

[workspace.dependencies]
# ADK crates
adk-cli = { package = "poly-adk", version = "0.0.9", path = "adk-cli" }
adk-resources = { package = "poly-adk-resources", version = "0.0.9", path = "adk-resources" }
adk-core = { package = "poly-adk-core", version = "0.0.9", path = "adk-core" }
adk-service = { package = "poly-adk-service", version = "0.0.9", path = "adk-service" }
adk-ffi = { package = "poly-adk-ffi", version = "0.0.9", path = "adk-ffi" }
adk-io = { package = "poly-adk-io", version = "0.0.9", path = "adk-io" }
adk-api-client = { package = "poly-adk-api-client", version = "0.0.9", path = "adk-api-client" }
adk-napi = { package = "poly-adk-napi", version = "0.0.9", path = "adk-napi" }
adk-protobuf = { package = "poly-adk-protobuf", version = "0.0.9", path = "adk-protobuf" }
adk-types = { package = "poly-adk-types", version = "0.0.9", path = "adk-types" }
# 3rd-party
anyhow = "1"
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc", "preserve_order"] }
serde_yaml_ng = "0.10.0"
base64 = "0.22"
prost = "0.14"
prost-types = "0.14"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
napi = { version = "3.9.1", default-features = false, features = ["dyn-symbols", "napi4"] }
napi-derive = "3.5.6"
napi-build = "2.3.2"
walkdir = "2"
sha2 = "0.10"
similar = "2"
globset = "0.4"
regex = "1"
fancy-regex = "0.14"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "query", "rustls", "blocking"] }
url = "2"
rich_rust = { version = "0.2.1", features = ["backtrace"] }
ruff_python_ast = { package = "littrs-ruff-python-ast", version = "0.6.2" }
ruff_python_parser = { package = "littrs-ruff-python-parser", version = "0.6.2" }
ruff_text_size = { package = "littrs-ruff-text-size", version = "0.6.2" }
# dev dependencies only
httpmock = { version = "0.8.3", features = ["record"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
