[package]
name = "poly-adk-api-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform API client boundary and push support for the PolyAI ADK."
readme = "README.md"

[lib]
name = "adk_api_client"

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
reqwest.workspace = true
url.workspace = true
uuid.workspace = true
prost.workspace = true
adk-protobuf.workspace = true
adk-types.workspace = true

[dev-dependencies]
httpmock.workspace = true
