[package]
name = "poly-adk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for the PolyAI ADK Rust port."
readme = "README.md"
autobins = false
exclude = ["tests/**"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rich_rust.workspace = true
adk-core.workspace = true
adk-platform-api.workspace = true

[dev-dependencies]
httpmock.workspace = true
serde_yaml.workspace = true

[[bin]]
name = "poly"
path = "src/bin/poly.rs"
