[package]
name = "poly-adk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the PolyAI ADK Rust port."
readme = "README.md"
autobins = false
exclude = ["tests/**"]

[dependencies]
anyhow.workspace = true
axoupdater.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rich_rust.workspace = true
adk-core.workspace = true
adk-api-client.workspace = true
adk-push-pull.workspace = true
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
ctrlc = "3.5.2"

[dev-dependencies]
httpmock.workspace = true
serde_yaml.workspace = true

[[bin]]
name = "poly"
path = "src/bin/poly.rs"
