[package]
name = "poly-adk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the PolyAI ADK Rust port."
readme = "README.md"
autobins = false
exclude = ["tests/**"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
reqwest.workspace = true
rich_rust.workspace = true
adk-core.workspace = true
adk-api-client.workspace = true
adk-resources.workspace = true
# 3rd-party CLI-only dependencies
axoupdater = { version = "0.10.0", features = ["blocking"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
ctrlc = "3.5.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "1.2.1"

[dev-dependencies]
httpmock.workspace = true
serde_yaml_ng.workspace = true

[[bin]]
name = "poly"
path = "src/bin/poly.rs"
