[package]
name = "adk-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
base64.workspace = true
thiserror.workspace = true
chrono.workspace = true
indexmap.workspace = true
walkdir.workspace = true
globset.workspace = true
regex.workspace = true
fancy-regex.workspace = true
ruff_python_parser = { package = "littrs-ruff-python-parser", version = "0.6.2" }
adk-domain = { path = "../adk-domain" }
adk-io = { path = "../adk-io" }
adk-platform-api = { path = "../adk-platform-api" }
