[package]
name = "poly-adk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core project workflows for the PolyAI ADK."
readme = "README.md"
exclude = ["tests/**"]

[lib]
name = "adk_core"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
base64.workspace = true
thiserror.workspace = true
chrono.workspace = true
indexmap.workspace = true
walkdir.workspace = true
globset.workspace = true
ruff_python_parser.workspace = true
adk-io.workspace = true
adk-api-client.workspace = true
adk-resources.workspace = true
adk-types.workspace = true
