[package]
name = "poly-adk-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared domain models for the PolyAI ADK Rust port."
readme = "README.md"

[lib]
name = "adk_domain"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
indexmap.workspace = true
