[package]
name = "poly-adk-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Filesystem, hashing, diff, path, and serialization helpers for the PolyAI ADK Rust port."
readme = "README.md"

[lib]
name = "adk_io"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
similar.workspace = true
adk-types.workspace = true
