[package]
name = "poly-adk-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "N-API wrapper for pure PolyAI ADK workflows."
readme = "README.md"
publish = false

[lib]
name = "adk_napi"
crate-type = ["cdylib", "rlib"]

[dependencies]
adk-core.workspace = true
adk-io.workspace = true
chrono.workspace = true
napi = { version = "3.9.1", default-features = false, features = ["dyn-symbols", "napi4"] }
napi-derive = "3.5.6"
serde_json.workspace = true

[dev-dependencies]
adk-protobuf.workspace = true
prost.workspace = true

[build-dependencies]
napi-build = "2.3.2"
