[package]
name = "adk-platform-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
indexmap.workspace = true
reqwest.workspace = true
url.workspace = true
uuid.workspace = true
prost.workspace = true
prost-types.workspace = true
adk-domain = { path = "../adk-domain" }
adk-protobuf = { path = "../adk-protobuf" }
