[package]
name = "poly-adk-platform-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Platform API client boundary and push support for the PolyAI ADK."
readme = "README.md"

[lib]
name = "adk_platform_api"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
indexmap.workspace = true
reqwest.workspace = true
url.workspace = true
uuid.workspace = true
prost.workspace = true
prost-types.workspace = true
adk-domain.workspace = true
adk-protobuf.workspace = true
