[package]
name = "poly-adk-protobuf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Protobuf command definitions for PolyAI ADK push operations."
readme = "README.md"
exclude = ["CLAUDE.md"]

[lib]
name = "adk_protobuf"

[dependencies]
prost.workspace = true
prost-types.workspace = true
