[package]
name = "adk-push-pull"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Projection materialization and push/pull command generation for the PolyAI ADK."
readme = "README.md"

[lib]
name = "adk_push_pull"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
indexmap.workspace = true
uuid.workspace = true
prost-types.workspace = true
adk-protobuf.workspace = true
adk-types.workspace = true
