[package]
name = "poly-adk-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for the PolyAI ADK Rust service layer."
publish = false

[lib]
name = "poly_adk_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
adk-api-client.workspace = true
adk-core.workspace = true
adk-io.workspace = true
adk-service.workspace = true
adk-types.workspace = true
indexmap.workspace = true
pyo3 = { version = "0.29.0", default-features = false, features = ["macros", "extension-module"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
