[package]
name = "poly-adk-resources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Resource-family semantics for the PolyAI ADK."
readme = "README.md"

[lib]
name = "adk_resources"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
indexmap.workspace = true
uuid.workspace = true
ruff_python_ast.workspace = true
ruff_python_parser.workspace = true
ruff_text_size.workspace = true
prost-types.workspace = true
regex.workspace = true
fancy-regex.workspace = true
adk-io.workspace = true
adk-protobuf.workspace = true
adk-types.workspace = true
