[package]
name = "poly-adk-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared data types for the PolyAI ADK Rust port."
readme = "README.md"

[lib]
name = "adk_types"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
indexmap.workspace = true
